@@ -3,6 +3,7 @@ $Id$
 Version 0.7.2 (...)
 
 - Converted some lingering Epytext markup to reStructuredText.
+- Added grizzled.history.
 
 ---------------------------------------------------------------------------
 Version 0.7.1 (16 July, 2008)
